<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProyectoAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_activity_menu_administrador">MenuAdministrador</string>
    <string name="tit">USUARIO</string>
    <string name="us">Nombre Usuario</string>
    <string name="pas">Password</string>
    <string name="Acep">Aceptar</string>
    <string name="Can">Cancelar</string>
    <string name="veri">.......................................................</string>
    <string name="AGR">Agregar</string>
    <string name="lis">Listar</string>
    <string name="admi">Administrador</string>
    <string name="Lid">Lider</string>
    <string name="title_activity_nuevo_usuario">NuevoUsuario</string>
    <string name="nom">Nombre Usuario</string>
    <string name="usu">Usuario</string>
    <string name="pasw">Password</string>
    <string name="nomb">Nombres</string>
    <string name="Apel">Apellidos</string>
    <string name="des">Descripcion</string>
    <string name="nuevo">NUEVO USUARIO</string>
    <string name="NAC">Fecha Nacimiento</string>
    <string name="fechaR">Fecha Registro</string>
    <string name="cont">Contacto</string>
    <string name="dom">Domicilio</string>
    <string name="ad">Administrador</string>
    <string name="lid">Lider</string>
    <string name="can">Cancelar</string>
    <string name="ace">OK</string>
    <string name="pp">Aceptar</string>
    <string name="title_activity_administrador">Administrador</string>
    <string name="title_activity_add_usuario">AddUsuario</string>
    <string name="title_activity_menu_asistencia">MenuAsistencia</string>
    <string name="sele">SELECCIONE UNA OPCION</string>
    <string name="selec">Seleccione una Opcion</string>
    <string name="cod">TIPO DE CODIGO</string>
    <string name="title_activity_menu_asistencias">MenuAsistencias</string>
    <string name="title_activity_control_asistencia">ControlAsistencia</string>
    <string name="texto">aqui..........</string>
    <string name="bot">boton</string>
    <string name="aa">SELECCIONE UNA OPCION</string>
    <string name="title_activity_control_personal">ControlPersonal</string>
    <string name="codig">Tipo de Codigo</string>
    <string name="datos">Datos de la Persona</string>
    <string name="contro">Control  de Asistencia</string>
    <string name="codi">Codigo</string>
    <string name="dato">Persona</string>
    <string name="title_activity_add_miembro">AddMiembro</string>

</resources>
