<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ControlPersonal" >

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFormat"
        android:layout_below="@+id/tvFormat"
        android:text="@string/codi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFormat"
        android:layout_alignParentTop="true"
        android:text="@string/contro"
        android:textSize="26sp" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/btCodigo"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/tvFormat"
        android:src="@drawable/enviar_dato" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="300dp"
        android:layout_height="114dp"
        android:layout_alignLeft="@+id/tvResult"
        android:layout_below="@+id/tvResult" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
              <TextView
        android:id="@+id/lblContenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvResult"
        android:layout_below="@+id/tvResult"
        android:text="@string/dato"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btCodigo"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignParentBottom="true"
        android:src="@drawable/codigo_qr" />

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton1"
        android:layout_alignRight="@+id/scrollView1"
        android:text="DigitalClock" />

    <TextView
        android:id="@+id/tvFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:text="@string/codig"
        android:textSize="20sp" />

</RelativeLayout>